# bowshock_editor

./: CMakeLists.txt  README.md  config.ini
cmake/: FindAssimp.cmake  FindBowshock.cmake  FindGLAD.cmake  FindGLFW.cmake  FindOpenGL.cmake  FindThirdPartyHeaders.cmake
shaders/: emissive.frag  gooch.frag  light.frag  mat.vert  multi_lights.frag  phong.frag  phong_maps.frag
shaders/learnopengl/hello_triangle/: basic2.frag
shaders/learnopengl/shaders/: basic.vert  color.vert  variable.frag
shaders/learnopengl/textures/: texture.vert
src/: CMakeLists.txt  editor_server.h  main.cpp  websocket_client.cpp  websocket_client.h
